# threadmap

./: .env.example  .gitignore  README.md
infrastructure/: docker-compose.yml
scripts/: run_collector.py  setup.sh
src/backend/: Dockerfile  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/app/: main.py
src/backend/app/api/routes/: alerts.py  briefs.py  cases.py  content.py  health.py  ingest.py  watchlists.py
src/backend/app/collectors/: __init__.py  base.py
src/backend/app/collectors/bluesky/: jetstream.py
src/backend/app/collectors/manual/: ingest.py
src/backend/app/collectors/reddit/: collector.py
src/backend/app/collectors/rss/: collector.py
src/backend/app/collectors/x/: search.py
src/backend/app/collectors/youtube/: collector.py
src/backend/app/core/: config.py  database.py
src/backend/app/enrichment/: __init__.py  dedup.py  embeddings.py  language.py  ner.py  pipeline.py  risk.py  topics.py  urls.py  watchlist_matcher.py
src/backend/app/events/: consumer.py  producer.py
src/backend/app/models/: __init__.py  actor.py  alert.py  base.py  case.py  claim.py  content.py  edge.py  entity.py  media_asset.py  narrative_cluster.py  provenance.py  source.py  user.py  watchlist.py
src/backend/app/provenance/: tracker.py
src/backend/app/schemas/: actor.py  alert.py  case.py  common.py  content.py  ingest.py  watchlist.py
src/backend/app/services/: alert_service.py  brief_service.py  case_service.py  content_service.py  watchlist_service.py
src/backend/tests/: test_collectors.py  test_enrichment.py  test_provenance.py
(+14 files in other folders)
